ZEROSC.theme.css
/* ... */
.guilds-1SWlCJ .scroller-1Bvpku{contain:none!important;padding-top:0}
.guilds-1SWlCJ .scroller-1Bvpku > [aria-label],.guilds-1SWlCJ .scroller-1Bvpku > [style]:nth-child(2){margin-top:55px}
.guilds-1SWlCJ .scroller-1Bvpku > [style] ~ [aria-label]{margin-top:0}
.wrapper-3NnKdC > ul > .scroller-1Bvpku > div[aria-label="Servers"]{margin-top:60px}
.tutorialContainer-2sGCg9{box-shadow:0 5px 5px var(--background-tertiary)}
.container-3w7J-x{z-index:1}
.guilds-1SWlCJ{width:80px}
.tree-2wKJdG{margin-left:5px;margin-top:5px}
div[style="opacity: 1; height: 56px; transform: scale(1);"]{top:8px;position:relative}

/* Content */
.scrollableContainer-2NUZem{min-height:50px}
.sansAttachButton-td2irx{margin-top:4px}
.scrollableContainer-2NUZem{min-height:55px}
.jumpToPresentBar-G1R9s6{padding:0;border-radius:50px;right:25px;bottom:45px;left:unset;display:flex;justify-content:center;align-items:center;animation-duration:.3s;animation-name:slidein;animation-fill-mode:forwards}
.jumpToPresentBar-G1R9s6 .spinner-2enMB9{padding:0}
@keyframes slidein {
from{bottom:-50px}
to{bottom:45px}
}
.newMessagesBar-265mhP{height:40px;margin-left:20px;margin-right:60px;top:10px}
#app-mount .option-3KoAJB:last-child,#app-mount .newMessagesBar-265mhP,#app-mount .container-2x5lvQ section{border-radius:8px!important}
.subtext-3CDbHg p{margin:0}
.theme-light .children-19S4PO,.toolbar-1t6TWx{background-color:rgba(255,255,255,0.2)}
.theme-dark .children-19S4PO,.toolbar-1t6TWx{background-color:rgba(0,0,0,0.2)!important}
.container-2ax-kl{color:rgba(var(--alt-color),0.9);font-weight:700}
.icon-2yIBmh{position:absolute;left:2px;top:6px;width:12px;height:12px}
.collapsed-2-tg8y .icon-2yIBmh{-webkit-transform:rotate(-90deg);transform:rotate(-90deg)}
.arrow-gKvcEx.icon-2yIBmh{width:19px;height:19px;margin-left:-5px;margin-top:-4px;color:rgba(var(--alt-color),0.9)}
/* Friends */
.wrapper-3EGhDO{background-color:var(--background-tertiary);border-radius:25px;padding:0}
.colorable-1bkp8v.white-3GPOIp,.colorable-1bkp8v.white-3GPOIp .centerIcon-2G6o-T{color:currentColor}
.colorable-1bkp8v.primary-3NQg8g,.colorable-1bkp8v.primary-3NQg8g.active-1QRrIS,.colorable-1bkp8v.primary-3NQg8g:hover,.colorable-1bkp8v.white-3GPOIp,.centerButton-3CaNcJ,.colorable-1bkp8v.white-3GPOIp.active-1QRrIS,.colorable-1bkp8v.white-3GPOIp:hover,.colorable-1bkp8v.red-33-Lnk{background:none!important}
.colorable-1bkp8v.primaryDark-3mSFDl{margin-bottom:2px;background-color:var(--alt-color2)}
.colorable-1bkp8v.primaryDark-3mSFDl:hover{margin-bottom:2px;background-color:rgba(var(--alt-color),0.5) [class="contents-18-Yxp premiumSubscribeButton-3TowJw"],[class="contents-18-Yxp giftButton-2uAsFo"] {;color:#161616!important}
.info-1VyQPT:after{top:10px!important;left:3px}
:root{--friend-width:170px;--friend-height:170px;--friend-blur:0}
.peopleColumn-29fq28 .scrollerBase-289Jih>div:not(.peopleList-3c4jOR){display:flex;flex-direction:row;justify-content:center;margin-top:15px;height:fit-content;width:fit-content}
.peopleColumn-29fq28{display:block;overflow:hidden scroll}
.peopleListItem-2nzedh{position:relative;display:block!important;height:var(--friend-width)!important;width:var(--friend-height);margin:1.8%!important;padding:0!important;border-radius:3px;box-shadow:0 0 12px rgba(0,0,0,0.25);background-color:var(--background-tertiary);animation:friendGridFade .75s ease;transition:250ms ease all,350ms ease background-color;display:none}
.title-30qZAO{margin:0;position:absolute;top:5px;font-size:15px;color:rgba(var(--alt-color),0.2);filter:brightness(130%);font-weight:700}
.peopleListItem-2nzedh:hover{background-color:rgba(var(--alt-color),0.2)!important;box-shadow:0 0 14px rgba(0,0,0,0.5)!important}
.actions-1SQwjn{display:none}
.peopleListItem-2nzedh:hover .actions-1SQwjn{position:absolute;display:flex;bottom:10px;right:-2px;transform:scale(0.7)}
.text-37NqbO{width:150px;position:relative;margin-left:-95px}
.userInfo-2zN2z8 .avatar-3W3CeO{transform:scale(2.8);margin-top:36%;margin-left:50%;filter:blur(var(--friend-blur))}
.userInfo-2zN2z8{height:160px;position:relative;width:135px;filter:blur(var(--friend-blur))}
.username-31C1TQ{white-space:nowrap;text-overflow:ellipsis;overflow:visible;color:var(--header-primary);font-weight:600}
          .modal-1TF_VN{
            background-color:rgb(24, 24, 24)!important;
            box-shadow: 0px 0px 5px 0px rgb(255, 255, 255)!important;
        }
        .layer-v9HyYc,
        .focusLock-Ns3yie, .root-1gCeng{
            outline: 0px 0px 10px 0px rgb(255, 255, 255)!important;
            box-shadow: 0px 0px 5px 0px rgb(255, 255, 255)!important;
            overflow:hidden;
            z-index:1;
        }
                .layer-v9HyYc,
        .focusLock-Ns3yie:focus-within, .root-1gCeng:focus-within{
            outline: 0px 0px 10px 0px rgb(255, 255, 255)!important;
            box-shadow: 0px 0px 5px 0px rgb(255, 255, 255)!important;
            overflow:hidden;
            z-index:1000;
        }

